<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyTree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">こんにちは！\n情報を入力してください！\n</string>
    <string name="fName">苗字:</string>
    <string name="your_name">名前:</string>
    <string name="parent">両親:</string>
    <string name="number">第何子:</string>
    <string name="birth">生年月日:</string>
    <string name="age">年齢:</string>
    <string name="family_name">苗字</string>
    <string name="name">名前</string>
    <string name="parent_name">親の名前</string>
    <string name="order">第何子ですか</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="gender">性別:</string>
    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="family_tree">家系図を見る</string>
    <string name="add">兄弟を追加する</string>
    <string name="add_s">＋</string>
    <string name="title_activity_another_family">AnotherFamilyActivity</string>

</resources>
