<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.manaita.familytree.DisplayActivity"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/a_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/fName" android:textSize="40sp"/>
        <TextView android:text="@string/your_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textSize="40sp"/>
        <TextView android:text="@string/parent" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="40sp"/>
        <TextView android:text="@string/number" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="40sp"/>
        <TextView android:text="@string/age" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="40sp"/>
        <TextView android:text="@string/birth" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vGroup"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_toRightOf="@id/a_layout">
    </LinearLayout>
    <Button
        android:id="@+id/add"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:onClick="toAddActivity"
        android:text="@string/family_tree"/>
</RelativeLayout>
