<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="@string/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/family_name" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText android:id="@+id/fName"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/family_name"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/your_name" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText android:id="@+id/name"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/parent" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText android:id="@+id/parent"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/parent_name"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/number" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText android:id="@+id/order"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/birth" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText android:id="@+id/year"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/year" />

                <EditText android:id="@+id/month"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/month" />

                <EditText android:id="@+id/day"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/day" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView android:text="@string/gender" android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gender_select"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gender_male"/>
                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gender_female"/>
                    </RadioGroup>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_send"
                    android:onClick="sendInfo"
                    android:layout_gravity="center_vertical" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>
